app/components/hostname/hostname.css
.hostname-group button {
    border-left: 0px;
    border-top-left-radius: 0px;
    border-bottom-left-radius: 0px;
}

.hostname-group input.hostname.form-control {
    width: 350px;
}

.hostname-group .dropdown-menu {
    width: 370px;
}

.hostname-group .close {
    position: relative;
    left: -20px;
    top: 5px;
}

